--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "opencli",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "^1.3.6"
-  },
-  "peerDependencies": {
-    "typescript": "^5.9.3"
-  },
-  "dependencies": {
-    "@apidevtools/swagger-parser": "^12.1.0",
-    "ajv": "^8.17.1",
-    "ajv-formats": "^3.0.1",
-    "commander": "^14.0.2",
-    "openapi-types": "^12.1.3",
-    "yaml": "^2.8.2"
-  }
+	"name": "opencli",
+	"module": "index.ts",
+	"type": "module",
+	"bin": {
+		"opencli": "./src/entry.ts"
+	},
+	"scripts": {
+		"lint": "biome ci",
+		"lint:check": "biome check --write --unsafe",
+		"lint:format": "biome format --write",
+		"test": "bun test",
+		"typecheck": "tsgo"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.3.11",
+		"@types/bun": "^1.3.6",
+		"@typescript/native-preview": "latest"
+	},
+	"dependencies": {
+		"@apidevtools/swagger-parser": "^12.1.0",
+		"ajv": "^8.17.1",
+		"ajv-formats": "^3.0.1",
+		"commander": "^14.0.2",
+		"openapi-types": "^12.1.3"
+	}
 }
