--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"lint:format": "biome format --write",
 		"test": "bun test",
 		"typecheck": "tsgo",
-		"smoke:specs": "bun ./src/smoke-specs.ts"
+		"smoke:specs": "bun ./src/smoke-specs.ts",
+		"compile": "bun ./src/compile.ts"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.11",
