--- a/package.json
+++ b/package.json
@@ -2,22 +2,21 @@
 	"name": "opencli",
 	"module": "index.ts",
 	"type": "module",
+	"version": "0.0.1",
 	"bin": {
-		"opencli": "./src/entry.ts"
+		"opencli": "./cli.ts"
 	},
 	"scripts": {
 		"lint": "biome ci",
 		"lint:check": "biome check --write --unsafe",
 		"lint:format": "biome format --write",
 		"test": "bun test",
-		"typecheck": "tsgo",
-		"smoke:specs": "bun ./src/smoke-specs.ts",
-		"compile": "bun ./src/compile.ts"
+		"typecheck": "tsgo"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.11",
 		"@types/bun": "^1.3.6",
-		"@typescript/native-preview": "latest"
+		"@typescript/native-preview": "^7.0.0-dev.20260120.1"
 	},
 	"dependencies": {
 		"@apidevtools/swagger-parser": "^12.1.0",
