--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
 	"bin": {
 		"specli": "./cli.ts"
 	},
+	"exports": {
+		".": "./index.ts",
+		"./ai": "./src/ai/index.ts"
+	},
 	"files": [
 		"cli.ts",
 		"index.ts",
@@ -21,6 +25,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.11",
 		"@types/bun": "^1.3.6",
+		"@types/node": "^22.19.7",
 		"@typescript/native-preview": "^7.0.0-dev.20260120.1"
 	},
 	"dependencies": {
@@ -28,6 +33,11 @@
 		"ajv": "^8.17.1",
 		"ajv-formats": "^3.0.1",
 		"commander": "^14.0.2",
-		"openapi-types": "^12.1.3"
+		"openapi-types": "^12.1.3",
+		"yaml": "^2.8.2",
+		"zod": "^4.3.5"
+	},
+	"peerDependencies": {
+		"ai": "^6.0.0"
 	}
 }
