--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	},
 	"exports": {
 		".": "./index.ts",
-		"./ai": "./src/ai/index.ts"
+		"./ai/tools": "./src/ai/tools.ts"
 	},
 	"files": [
 		"cli.ts",
@@ -34,10 +34,10 @@
 		"ajv-formats": "^3.0.1",
 		"commander": "^14.0.2",
 		"openapi-types": "^12.1.3",
-		"yaml": "^2.8.2",
-		"zod": "^4.3.5"
+		"yaml": "^2.8.2"
 	},
 	"peerDependencies": {
-		"ai": "^6.0.0"
+		"ai": "^6.0.42",
+		"zod": "^4.3.5"
 	}
 }
