--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "specli",
-	"version": "0.0.7",
+	"version": "0.0.8",
 	"type": "module",
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"bin": {
-		"specli": "./dist/cli.js"
+		"specli": "./bin/specli.js"
 	},
 	"exports": {
 		".": {
@@ -26,6 +26,7 @@
 	},
 	"files": [
 		"dist",
+		"bin",
 		"cli.ts",
 		"index.ts",
 		"src",
