--- a/package.json
+++ b/package.json
@@ -1,40 +1,25 @@
 {
 	"name": "specli",
-	"version": "0.0.11",
+	"version": "0.0.12",
 	"type": "module",
-	"main": "./dist/index.js",
 	"module": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"bin": {
-		"specli": "./bin/specli.js"
+		"specli": "./bin/cli.sh"
 	},
 	"exports": {
-		".": {
-			"bun": "./index.ts",
-			"import": {
-				"types": "./dist/index.d.ts",
-				"default": "./dist/index.js"
-			}
-		},
 		"./ai/tools": {
-			"bun": "./src/ai/tools.ts",
-			"import": {
-				"types": "./dist/src/ai/tools.d.ts",
-				"default": "./dist/src/ai/tools.js"
-			}
+			"import": "./dist/ai/tools.js",
+			"types": "./dist/ai/tools.d.ts"
 		}
 	},
 	"files": [
-		"dist",
 		"bin",
-		"cli.ts",
-		"index.ts",
-		"src",
-		"!**/*.test.ts"
+		"dist"
 	],
 	"scripts": {
-		"build": "bun run scripts/build.ts",
-		"prepublishOnly": "bun run build",
+		"build": "tsc",
+		"prepublishOnly": "tsc",
 		"lint": "biome ci",
 		"lint:check": "biome check --write --unsafe",
 		"lint:format": "biome format --write",
@@ -42,9 +27,11 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.11",
+		"@tsconfig/node22": "^22.0.5",
 		"@types/bun": "^1.3.6",
 		"@types/node": "^22.19.7",
-		"@typescript/native-preview": "^7.0.0-dev.20260120.1"
+		"@typescript/native-preview": "^7.0.0-dev.20260122.3",
+		"typescript": "^5.9.3"
 	},
 	"dependencies": {
 		"@apidevtools/swagger-parser": "^12.1.0",
@@ -55,7 +42,7 @@
 		"yaml": "^2.8.2"
 	},
 	"peerDependencies": {
-		"ai": "^6.0.42",
-		"zod": "^4.3.5"
+		"ai": "^6.0.0",
+		"zod": "^4.0.0"
 	}
 }
