--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "specli",
-	"version": "0.0.17",
+	"version": "0.0.18",
 	"type": "module",
 	"module": "./dist/index.js",
 	"types": "./dist/index.d.ts",
@@ -16,6 +16,7 @@
 	"files": [
 		"bin",
 		"dist",
+		"src",
 		"README.md",
 		"package.json"
 	],
