--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 	],
 	"scripts": {
 		"build": "tsc",
-		"prepublishOnly": "tsc",
+		"prepublishOnly": "rm -rf dist && tsc",
 		"lint": "biome ci",
 		"lint:check": "biome check --write --unsafe",
 		"lint:format": "biome format --write",
